--- a/SimpleGates.ipynb
+++ b/SimpleGates.ipynb
@@ -45,11 +45,11 @@
     " \\end{array}\n",
     " \\right)  = |0\\rangle\\langle 0 | - |1\\rangle\\langle 1 |$ \n",
     " \n",
-    " $Y\\equiv \\sigma_y = \\left( \\begin{array}{cc}\n",
-    " 0 & -i \\\\\n",
-    " i & 0  \n",
+    " $Y\\equiv - i\\sigma_y = \\left( \\begin{array}{cc}\n",
+    " 0 & -1 \\\\\n",
+    " 1 & 0  \n",
     " \\end{array}\n",
-    " \\right)  = i ( |1\\rangle\\langle 0 | - |0\\rangle\\langle 1 |)$ "
+    " \\right)  =  |1\\rangle\\langle 0 | - |0\\rangle\\langle 1 |$ "
    ]
   },
   {
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: $H = X (1+ X Z)/\\sqrt{2} =  X (1 -i Y)/\\sqrt{2} = X e^{-i \\pi Y/4 } = i  e^{-i \\pi X/2 } e^{-i \\pi Y/4 }  $ "
+    "Answer: $H = X (1+ X Z)/\\sqrt{2} =  X (1 + Y)/\\sqrt{2} = X e^{ \\pi Y/4 } = i  e^{-i \\pi X/2 } e^{ \\pi Y/4 }  $ "
    ]
   },
   {
