--- a/ToffoliTest1.ipynb
+++ b/ToffoliTest1.ipynb
@@ -18,70 +18,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: qiskit in c:\\users\\mike\\anaconda3\\lib\\site-packages (0.20.0)\n",
-      "Requirement already satisfied: qiskit-ignis==0.4.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit) (0.4.0)\n",
-      "Requirement already satisfied: qiskit-aqua==0.7.5 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit) (0.7.5)\n",
-      "Requirement already satisfied: qiskit-aer==0.6.1 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit) (0.6.1)\n",
-      "Requirement already satisfied: qiskit-ibmq-provider==0.8.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit) (0.8.0)\n",
-      "Requirement already satisfied: qiskit-terra==0.15.1 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit) (0.15.1)\n",
-      "Requirement already satisfied: setuptools>=40.1.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ignis==0.4.0->qiskit) (49.2.0.post20200714)\n",
-      "Requirement already satisfied: numpy>=1.13 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ignis==0.4.0->qiskit) (1.18.5)\n",
-      "Requirement already satisfied: scikit-learn>=0.17 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ignis==0.4.0->qiskit) (0.23.1)\n",
-      "Requirement already satisfied: scipy!=0.19.1,>=0.19 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ignis==0.4.0->qiskit) (1.5.0)\n",
-      "Requirement already satisfied: docplex in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (2.15.194)\n",
-      "Requirement already satisfied: quandl in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (3.5.2)\n",
-      "Requirement already satisfied: psutil>=5 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (5.7.0)\n",
-      "Requirement already satisfied: yfinance in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (0.1.54)\n",
-      "Requirement already satisfied: h5py in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (2.10.0)\n",
-      "Requirement already satisfied: sympy>=1.3 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (1.6.1)\n",
-      "Requirement already satisfied: dlx in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (1.0.4)\n",
-      "Requirement already satisfied: networkx>=2.2 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (2.4)\n",
-      "Requirement already satisfied: fastdtw in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (0.3.4)\n",
-      "Requirement already satisfied: pandas in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aqua==0.7.5->qiskit) (1.0.5)\n",
-      "Requirement already satisfied: pybind11>=2.4 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aer==0.6.1->qiskit) (2.5.0)\n",
-      "Requirement already satisfied: cython>=0.27.1 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-aer==0.6.1->qiskit) (0.29.21)\n",
-      "Requirement already satisfied: requests-ntlm>=1.1.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.8.0->qiskit) (1.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.8.0->qiskit) (2.8.1)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.8.0->qiskit) (1.25.9)\n",
-      "Requirement already satisfied: nest-asyncio!=1.1.0,>=1.0.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.8.0->qiskit) (1.4.0)\n",
-      "Requirement already satisfied: websockets>=8; python_version > \"3.6\" in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.8.0->qiskit) (8.1)\n",
-      "Requirement already satisfied: requests>=2.19 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-ibmq-provider==0.8.0->qiskit) (2.24.0)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-terra==0.15.1->qiskit) (3.2.0)\n",
-      "Requirement already satisfied: retworkx>=0.4.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-terra==0.15.1->qiskit) (0.4.0)\n",
-      "Requirement already satisfied: ply>=3.10 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-terra==0.15.1->qiskit) (3.11)\n",
-      "Requirement already satisfied: dill>=0.3 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-terra==0.15.1->qiskit) (0.3.2)\n",
-      "Requirement already satisfied: python-constraint>=1.4 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-terra==0.15.1->qiskit) (1.4.0)\n",
-      "Requirement already satisfied: fastjsonschema>=2.10 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from qiskit-terra==0.15.1->qiskit) (2.14.5)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from scikit-learn>=0.17->qiskit-ignis==0.4.0->qiskit) (0.16.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from scikit-learn>=0.17->qiskit-ignis==0.4.0->qiskit) (2.1.0)\n",
-      "Requirement already satisfied: six in c:\\users\\mike\\anaconda3\\lib\\site-packages (from docplex->qiskit-aqua==0.7.5->qiskit) (1.15.0)\n",
-      "Requirement already satisfied: inflection>=0.3.1 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from quandl->qiskit-aqua==0.7.5->qiskit) (0.5.1)\n",
-      "Requirement already satisfied: more-itertools in c:\\users\\mike\\anaconda3\\lib\\site-packages (from quandl->qiskit-aqua==0.7.5->qiskit) (8.4.0)\n",
-      "Requirement already satisfied: multitasking>=0.0.7 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from yfinance->qiskit-aqua==0.7.5->qiskit) (0.0.9)\n",
-      "Requirement already satisfied: mpmath>=0.19 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from sympy>=1.3->qiskit-aqua==0.7.5->qiskit) (1.1.0)\n",
-      "Requirement already satisfied: decorator>=4.3.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from networkx>=2.2->qiskit-aqua==0.7.5->qiskit) (4.4.2)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from pandas->qiskit-aqua==0.7.5->qiskit) (2020.1)\n",
-      "Requirement already satisfied: ntlm-auth>=1.0.2 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.8.0->qiskit) (1.5.0)\n",
-      "Requirement already satisfied: cryptography>=1.3 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.8.0->qiskit) (2.9.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.8.0->qiskit) (2020.6.20)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.8.0->qiskit) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from requests>=2.19->qiskit-ibmq-provider==0.8.0->qiskit) (2.10)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from jsonschema>=2.6->qiskit-terra==0.15.1->qiskit) (0.16.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from jsonschema>=2.6->qiskit-terra==0.15.1->qiskit) (19.3.0)\n",
-      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in c:\\users\\mike\\anaconda3\\lib\\site-packages (from cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.8.0->qiskit) (1.14.0)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\mike\\anaconda3\\lib\\site-packages (from cffi!=1.11.3,>=1.8->cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.8.0->qiskit) (2.20)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install qiskit\n",
+    "#pip install qiskit\n",
     "import qiskit as qk\n",
-    "from qiskit import IBMQ,Aer"
+    "from qiskit import IBMQ,Aer\n",
+    "from qiskit import *\n",
+    "from math import pi\n",
+    "from qiskit.visualization import plot_bloch_vector\n",
+    "from qiskit.visualization import plot_bloch_multivector"
    ]
   },
   {
@@ -250,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x2ad78f28ac0>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x1e4602ac340>"
       ]
      },
      "execution_count": 4,
@@ -278,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x2ad07c53580>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x1e4612ffa60>"
       ]
      },
      "execution_count": 5,
@@ -327,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x2ad78f402b0>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x1e45283b6a0>"
       ]
      },
      "execution_count": 6,
@@ -355,7 +300,7 @@
     {
      "data": {
       "text/plain": [
-       "<qiskit.circuit.instructionset.InstructionSet at 0x2ad78f28ca0>"
+       "<qiskit.circuit.instructionset.InstructionSet at 0x1e452836310>"
       ]
      },
      "execution_count": 7,
