--- a/HW4-hint.ipynb
+++ b/HW4-hint.ipynb
@@ -19,7 +19,8 @@
     "\n",
     "  \n",
     "<b> Solution </b>\n",
-    "We will use similar approach as in Qiskit tutorial. The key components is the realization of modular exponent $a^x (mod N)$ using qunatum operators. \n"
+    "We will use similar approach as in Qiskit tutorial https://qiskit.org/textbook/ch-algorithms/shor.html. \n",
+    "The key components is the realization of modular exponent $a^x (mod N)$ using qunatum operators. \n"
    ]
   },
   {
