--- a/HW4-sol.ipynb
+++ b/HW4-sol.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$QFT|x\\rangle = \\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}e^{2\\pi i \\frac{xy}{2^n}} |y\\rangle$"
+    " $QFT|x\\rangle = \\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}e^{2\\pi i \\frac{xy}{2^n}} |y\\rangle$"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$y = \\sum\\limits_{k=1}^{n} 2^{n-k} y_k$"
+    " $y = \\sum\\limits_{k=1}^{n} 2^{n-k} y_k$"
    ]
   },
   {
@@ -61,13 +61,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}e^{2\\pi i \\frac{xy}{2^n}} |y\\rangle = \n",
-    "\\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}e^{2\\pi ix \\left[ \\sum\\limits_{k=1}^{n} y_k / 2^k \\right]} |y_1 y_2 \\dots y_n\\rangle = \n",
-    "\\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}\\prod\\limits_{k=1}^{n}e^{2\\pi ix y_k / 2^k } |y_1 y_2 \\dots y_n\\rangle = \\\\ =\n",
-    "\\frac{1}{2^{n/2}}\\prod\\limits_{k=1}^{n}\\left( e^{2\\pi ix 0 / 2^k } |0\\rangle_k + e^{2\\pi ix 1 / 2^k } |1\\rangle_k \\right)= \n",
-    "\\frac{1}{2^{n/2}}\\prod\\limits_{k=1}^{n}\\left( |0\\rangle_k + e^{2\\pi ix / 2^k } |1\\rangle_k \\right)= \\\\ =\n",
-    "\\frac{1}{2^{n/2}} \\left( |0\\rangle_1 + e^{2\\pi ix / 2 } |1\\rangle_1  \\right) \\otimes \\left( |0\\rangle_2 + e^{2\\pi ix / 2^2 } |1\\rangle_2  \\right) \\otimes \\dots \\otimes\n",
-    "\\left( |0\\rangle_{n-1} + e^{2\\pi ix / 2^{n-1} } |1\\rangle_{n-1}  \\right) \\otimes \\left( |0\\rangle_n + e^{2\\pi ix / 2^n } |1\\rangle_n  \\right)$"
+    " $\\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}e^{2\\pi i \\frac{xy}{2^n}} |y\\rangle = \n",
+    " \\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}e^{2\\pi ix \\left[ \\sum\\limits_{k=1}^{n} y_k / 2^k \\right]} \n",
+    " |y_1 y_2 \\dots y_n\\rangle  = \n",
+    " \\frac{1}{2^{n/2}}\\sum\\limits_{y=0}^{2^n-1}\\prod\\limits_{k=1}^{n}e^{2\\pi ix y_k / 2^k } |y_1 y_2 \\dots y_n\\rangle = \\\\ =\n",
+    " \\frac{1}{2^{n/2}}\\prod\\limits_{k=1}^{n}\\left( e^{2\\pi ix 0 / 2^k } |0\\rangle_k + e^{2\\pi ix 1 / 2^k } |1\\rangle_k \\right)= \n",
+    " \\frac{1}{2^{n/2}}\\prod\\limits_{k=1}^{n}\\left( |0\\rangle_k + e^{2\\pi ix / 2^k } |1\\rangle_k \\right)= \\\\ =\n",
+    " \\frac{1}{2^{n/2}} \\left( |0\\rangle_1 + e^{2\\pi ix / 2 } |1\\rangle_1  \\right) \\otimes \n",
+    " \\left( |0\\rangle_2 + e^{2\\pi ix / 2^2 }  |1\\rangle_2  \\right) \\otimes \n",
+    " \\dots \\otimes\n",
+    " \\left( |0\\rangle_{n-1} + e^{2\\pi ix / 2^{n-1} } |1\\rangle_{n-1}  \\right) \n",
+    " \\otimes \\left( |0\\rangle_n + e^{2\\pi ix / 2^n } |1\\rangle_n  \\right)$"
    ]
   },
   {
@@ -81,7 +85,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$H|x_k\\rangle = \\frac{1}{\\sqrt{2}}\\left( |0\\rangle + (-1)^{x_k}|1\\rangle \\right) \\equiv \\frac{1}{\\sqrt{2}}\\left( |0\\rangle + e^{2\\pi i x_k / 2}|1\\rangle \\right)$"
+    " $H|x_k\\rangle = \\frac{1}{\\sqrt{2}}\\left( |0\\rangle + (-1)^{x_k}|1\\rangle \\right) \\equiv \\frac{1}{\\sqrt{2}}\n",
+    " \\left( |0\\rangle + e^{2\\pi i x_k / 2}|1\\rangle \\right)$"
    ]
   },
   {
@@ -109,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\prod\\limits_{j=k+1}^{n} C_j ROT_k H |x\\rangle_k$"
+    " $\\prod\\limits_{j=k+1}^{n} C_j ROT_k H |x\\rangle_k$"
    ]
   },
   {
@@ -123,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$C_j ROT_k |1\\rangle_k = e^{2\\pi i x_j/2^k} |1\\rangle_k$"
+    " $C_j ROT_k |1\\rangle_k = e^{2\\pi i x_j/2^k} |1\\rangle_k$"
    ]
   },
   {
